--- a/config/twitter-sample.yml
+++ b/config/twitter-sample.yml
@@ -1,3 +1,4 @@
+# See https://python-twitter.readthedocs.io/en/latest/getting_started.html
 config:
   consumer_key: <YOUR_CONSUMER_KEY>
   consumer_secret: <YOUR_CONSUMER_SECRET>
