--- a/config/twitter-sample.yml
+++ b/config/twitter-sample.yml
@@ -4,3 +4,4 @@ config:
   consumer_secret: <YOUR_CONSUMER_SECRET>
   access_token_key: <YOUR_ACCESS_TOKEN_KEY>
   access_token_secret: <YOUR_ACCESS_TOKEN_SECRET>
+  share_token: "#share"
