--- a/config/twitter.example.yml
+++ b/config/twitter.example.yml
@@ -1,5 +1,6 @@
 # See https://python-twitter.readthedocs.io/en/latest/getting_started.html
 config:
+  enabled: "True"
   consumer_key: <YOUR_CONSUMER_KEY>
   consumer_secret: <YOUR_CONSUMER_SECRET>
   access_token_key: <YOUR_ACCESS_TOKEN_KEY>
